--- a/bootkernel/kernel/BeaglePlay.config
+++ b/bootkernel/kernel/BeaglePlay.config
@@ -3277,7 +3277,7 @@ CONFIG_COMMON_CLK=y
 # CONFIG_COMMON_CLK_RS9_PCIE is not set
 # CONFIG_COMMON_CLK_SI521XX is not set
 # CONFIG_COMMON_CLK_VC3 is not set
-CONFIG_COMMON_CLK_VC5=y
+# CONFIG_COMMON_CLK_VC5 is not set
 # CONFIG_COMMON_CLK_VC7 is not set
 # CONFIG_COMMON_CLK_FIXED_MMIO is not set
 CONFIG_TI_SCI_CLK=y
@@ -3424,10 +3424,7 @@ CONFIG_EXTCON=y
 # CONFIG_EXTCON_RT8973A is not set
 # CONFIG_EXTCON_SM5502 is not set
 # CONFIG_EXTCON_USB_GPIO is not set
-CONFIG_MEMORY=y
-# CONFIG_ARM_PL172_MPMC is not set
-CONFIG_OMAP_GPMC=y
-# CONFIG_OMAP_GPMC_DEBUG is not set
+# CONFIG_MEMORY is not set
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
 # CONFIG_IIO_BUFFER_CB is not set
@@ -4086,7 +4083,7 @@ CONFIG_MULTIPLEXER=y
 # CONFIG_MUX_ADG792A is not set
 # CONFIG_MUX_ADGS1408 is not set
 # CONFIG_MUX_GPIO is not set
-CONFIG_MUX_MMIO=y
+# CONFIG_MUX_MMIO is not set
 # end of Multiplexer drivers
 
 CONFIG_PM_OPP=y
